Fixed bug with background img carousel not showing correctly

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ h3 {
   box-shadow: 0 2px 5px 1px rgb(15, 15, 15);
 }
 
-.background-images {
+.background-img-layout {
   position: fixed;
   top: 10%;
   right: 0;
